fix: singleton import
